--- a/style.css
+++ b/style.css
@@ -44,3 +44,72 @@ body {
 .bg-light{
     background-color: var(--bg_default) !important;
 }
+
+.bg-body{
+    background-color: var(--bg_body) !important;
+}
+
+.heading-container {
+    position: relative;
+    padding-bottom: 15px;
+}
+
+.heading-text {
+    padding-top: 45px;
+    text-align: left;
+    z-index: 2;
+}
+
+.heading-text>h2,
+p {
+    padding: 0;
+    margin: 0;
+}
+
+.heading-text>h2 {
+    color: var(--brand-secondary);
+    font-weight: 900;
+    font-size: 19px;
+}
+
+.heading-text>p {
+    font-weight: 400;
+}
+
+
+.heading-triangle {  
+    border-style: solid;
+    z-index: 1;
+}
+
+.heading-triangle-left {
+    border-width: 0px 0 70px 90vw;
+    border-color: transparent transparent transparent var(--brand-primary);
+    position: absolute;
+    left: 0;
+}
+
+.heading-triangle-right {
+    border-width: 0 90vw 70px 0;
+    border-color: transparent var(--brand-secondary) transparent transparent;
+    position: absolute;
+    right: 0;
+}
+
+.main-line{
+    margin-top: 15px;
+}
+
+.input-group-text {
+    border: 0px;
+}
+
+.row {
+    margin-right: 0; 
+    margin-left: 0; 
+}
+
+.row>* {
+    padding-right: 0;
+    padding-left: 0;
+}
